--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+body:before {
+    z-index: -1;
+    content: "";
+    background-image: url("../public/marvel_bg.jpeg");
+    background-repeat: repeat;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.4;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -11,17 +24,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
